--- a/.project
+++ b/.project
@@ -21,4 +21,15 @@
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>org.tizen.web.project.builder.WebNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1633898184986</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-service</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
